demos/5-zero-trust-networking/manifests/tester-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: demo-groot
  labels:
    app: tester
spec:
  restartPolicy: Never
  containers:
    - name: tester
      image: curlimages/curl:8.8.0
      command: ["sleep", "3600"]
